--- a/light.html
+++ b/light.html
@@ -56,7 +56,16 @@
 	           <li><a class="active" href="#">Design</a></li>
 	           <li><a href="#">HTML5</a></li>
 	           <li><a href="#">Apple</a></li>
-	           <li><a href="#">Tech</a></li>	           	           
+	           <li><a href="#">Tech</a></li>
+	           <br />
+	           <li><span class="button large">Sign up</span></li>
+	           <br />
+	           <li><span class="button">Follow</span></li>
+	           <br />
+	           <li><span class="button small">Send message</span></li>	           
+	           <br />
+	           <li><span class="button mini">Send message</span></li>	           
+	           
 	       </ul>
 	   </nav>
 	
@@ -64,6 +73,8 @@
             <header>
                 <h1>DESIGN</h1>
 <!--                 <span class="input">Click here to share an <a href="#">article</a></span> -->
+
+                
             </header>
 
             <article>
