--- a/experiments/skeleton.html
+++ b/experiments/skeleton.html
@@ -60,7 +60,7 @@
             
             .button.disclosure {
                 padding-right: 23px;            
-                background-image: url('./public/images/disclosure-arrow.png');
+                background-image: url('../public/images/disclosure-arrow.png');
             }
             
             .button.cta {
