--- a/public/experiments/light.html
+++ b/public/experiments/light.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
 		<title></title>
-        <link rel="stylesheet/less" type="text/css" href="../public/less/light.less">
-        <script src="../public/javascript/library/less/less-1.2.1.min.js" type="text/javascript"></script>
-        <script src="../public/javascript/library/zepto/zepto.min.js" type="text/javascript"></script>
+        <link rel="stylesheet/less" type="text/css" href="../less/light.less">
+        <script src="../javascript/library/less/less-1.2.1.min.js" type="text/javascript"></script>
+        <script src="../javascript/library/zepto/zepto.min.js" type="text/javascript"></script>
         <script>
         
             $('document').ready(function() {
